--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 ## This file lists all individuals who contributed to these project
 
 Peter Wairimu <chegewairimu66@gmail.com>
-Charles Mbithi Rhoda<>
+Charles Mbithi Rhoda<mbithicharlse@gmail.com>
